# DoubleIntegratorModel

./: CMakeLists.txt  SimpleDI_model.cpp
DoubleInt_Py_Implementation/: Bang_Bang_Control.py
include/: DoubleIntegrator.hpp  LQRcontrol.hpp  globals.hpp
src/: DoubleIntegrator.cpp  LQRcontrol.cpp  main.cpp
